--- a/.gitattributes
+++ b/.gitattributes
@@ -1,16 +1,16 @@
-2048/* linguist-vendored
-HTML5-Asteroids/* linguist-vendored
-__pycache__/* linguist-vendored
-btd4/* linguist-vendored
-cookieclicker/* linguist-vendored
-hextris/* linguist-vendored
-mc-classic/* linguist-vendored
-node_modules/* linguist-generated
-pacman-legacy/* linguist-vendored
-pacman/* linguist-vendored
-radius-raid/* linguist-vendored
-run3/* linguist-vendored
-slope/* linguist-vendored
-spaceinvaders/* linguist-vendored
-tetris/* linguist-vendored
-vex5/* linguist-vendored
+2048/** linguist-vendored
+HTML5-Asteroids/** linguist-vendored
+__pycache__/** linguist-vendored
+btd4/** linguist-vendored
+cookieclicker/** linguist-vendored
+hextris/** linguist-vendored
+mc-classic/** linguist-vendored
+node_modules/** linguist-generated
+pacman-legacy/** linguist-vendored
+pacman/** linguist-vendored
+radius-raid/** linguist-vendored
+run3/** linguist-vendored
+slope/** linguist-vendored
+spaceinvaders/** linguist-vendored
+tetris/** linguist-vendored
+vex5/** linguist-vendored
